[package]
authors = ["David Michael Weis <dweis7@gmail.com>"]
edition = "2021"
license = "MIT OR APACHE"
name = "mqtt-mcap-logger"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/mqtt-mcap-logger"
version = "0.1.0"

[dependencies]
mcap = "0.6.0"
# mcap = {git = "https://github.com/dmweis/mcap", branch = "dmw/flush-on-chunk-finish"}
memmap2 = "0.5.10"
rumqttc = "0.20.0"

# async
tokio = {version = "1", features = ["full"]}

# utils
clap = {version = "4.1.1", features = ["derive"]}
jsonschema = "0.17.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# error handling
anyhow = "1.0"
thiserror = "1.0"
